Initial Commit: Added movie controller, movie service, and added to movie dispatcher, Fixed error in readme.

--- a/StrategyCorps.CodeSample.Models/StrategyCorps.CodeSample.Models.csproj
+++ b/StrategyCorps.CodeSample.Models/StrategyCorps.CodeSample.Models.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MovieResultDto.cs" />
     <Compile Include="TelevisionResultDto.cs" />
+    <Compile Include="MovieSearchResponseDto.cs" />
     <Compile Include="TelevisionSearchResponseDto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
