--- a/StrategyCorps.CodeSample.Interfaces.Dispatchers/StrategyCorps.CodeSample.Interfaces.Dispatchers.csproj
+++ b/StrategyCorps.CodeSample.Interfaces.Dispatchers/StrategyCorps.CodeSample.Interfaces.Dispatchers.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMovieEntertainmentDispatcher.cs" />
     <Compile Include="IEntertainmentDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
