--- a/StrategyCorps.CodeSample.WebApi/packages.config
+++ b/StrategyCorps.CodeSample.WebApi/packages.config
@@ -27,6 +27,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="NLog" version="4.4.7" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="StructureMap" version="4.4.5" targetFramework="net462" />
   <package id="StructureMap.MVC5" version="3.0.4.125" targetFramework="net462" />
